--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
     "name": "t3.demo.app",
     "version": "1.0.50",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "bun run --watch src/main.tsx"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "bun run --watch src/main.tsx"
     },
     "dependencies": {
-      "@elysiajs/html": "^1.2.0",
-      "@elysiajs/static": "^1.2.0",
-      "@kitajs/ts-html-plugin": "^4.1.1",
-      "elysia": "latest"
+        "@elysiajs/html": "^1.2.0",
+        "@elysiajs/static": "^1.2.0",
+        "@kitajs/ts-html-plugin": "^4.1.1",
+        "@types/react": "^19.0.8",
+        "elysia": "latest",
+        "react": "^19.0.0"
     },
     "devDependencies": {
-      "bun-types": "latest"
+        "bun-types": "latest"
     },
     "module": "src/index.js"
-  }
+}
