--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
         "@elysiajs/html": "^1.2.0",
         "@elysiajs/static": "^1.2.0",
         "@kitajs/ts-html-plugin": "^4.1.1",
-        "@types/react": "^19.0.8",
-        "elysia": "latest",
-        "react": "^19.0.0"
+        "elysia": "latest"
     },
     "devDependencies": {
         "bun-types": "latest"
