--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.50",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "bun run --watch src/main.tsx"
+        "dev": "bun run --watch src/main.tsx",
+	"start": "bun run src/main.tsx"
     },
     "dependencies": {
         "@elysiajs/html": "^1.2.0",
